Bug 157571 - FILEOPEN: DOCX: Incorrect blank space after table
Summary: FILEOPEN: DOCX: Incorrect blank space after table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Anchor-and-Text-Wrap
  Show dependency treegraph
 
Reported: 2023-10-03 11:25 UTC by Xisco Faulí
Modified: 2023-10-11 00:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparsion MSO vs LibreOffice 24.2 master (365.20 KB, image/png)
2023-10-03 11:25 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-10-03 11:25:00 UTC
Created attachment 189973 [details]
Comparsion MSO vs LibreOffice 24.2 master

Steps to reproduce:
1. Open attachment 56104 [details] from bug 45195

-> The content after the table in page 1 is moved to page 2. it should be in page 1. See comparison


Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c4913e03e8427a576138601958f2dbf13b8c37b
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-10-03 11:25:50 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2023-07-17 09:00:33 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2023-07-17 11:21:32 +0200
commit a4af5432753408c4eea8a8d56c2f48202160c5fe (patch)
tree ddfcdbb2d1fc345b004d7b24e0a387a6b20283b2
parent 107ab712725e92fc527b54e91f317f932b78146a (diff)
tdf#120262 sw floattable, legacy: fix text wrap around fly when no content fits

Bisected with: bibisect-linux64-24.2

Adding Cc: to Miklos Vajna
Comment 2 Miklos Vajna 2023-10-04 06:35:48 UTC
Thanks, I'll take a look.
Comment 3 Commit Notification 2023-10-10 07:30:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4a5fb05d5e2448453477ce14862a8cf9846ecb49

tdf#157571 sw floattable: fix incorrect blank space after table-in-shape

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2023-10-10 08:12:43 UTC
Verified in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fa834e64e927efca00c9c47edfee58f0714c4fd4
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 5 Commit Notification 2023-10-10 09:02:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f3ff9c42de8e37fef48e841eeff9732ef01bd460

tdf#157571 sw floattable: fix incorrect blank space after table-in-shape

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.